--- a/my-skills.html
+++ b/my-skills.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css"> 
     <script src="https://kit.fontawesome.com/3d19df2003.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
     <header>
         <div class="nav-center">
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="logo" class="logo" width="100px" height="150px"></a>
+                <a href="#"><img src="images/logo.png" alt="logo" class="logo"></a>
                 <!-- toggle btns -->
                 <div class="toggle-icon">
-                    <span class="toggle-btn bars"><i class="fas fa-bars"></i></span>
-                    <span class="toggle-btn times"><i class="fas fa-times"></i></span>
+                    <span class="toggle-btn bars"><i class="fa-solid fa-bars"></i></span>
+                    <span class="toggle-btn xmark"><i class="fa-solid fa-xmark"></i></span>
                 </div>
             </nav>
 
@@ -39,29 +38,30 @@
                     </ul>
                     <!-- social icons for header below -->
                     <div class="social-icons">
-                        <li><a href="https://www.facebook.com"class="link"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com"class="link"><i class="fa-brands fa-twitter"></i></i></a></li> 
-                        <li><a href="https://www.twitter.com" class="link"><i class="fa-brands fa-instagram"></i></a></li> 
-                        <li><a href="https://www.youtube.com" class="link"><i class="fa-brands fa-youtube"></i></i></a></li>
+                        <a href="https://www.facebook.com/rolando.majait.5?mibextid=ZbWKwL" class="link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/tottskie16/photo" class="link"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/p/CjiAuhIJPCymsB0DI1SvgeTUWm304aNqhqSjtw0/" class="link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/rolandz16" class="link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCG2skpNoSKjVpLNsHROlFmg/" class="link"><i class="fab  fa-youtube"></i></a>
                     </div>
                     <!-- social icons for header ends here -->
                 </div>
                 
             </div>
-            <!-- resume link -->
-            <a href="#" class="resume">Portfolio</a>
+            <!-- Portfolio link -->
+            <a href="index.html" class="resume">Portolio</a>
         </div> 
         <!-- nav center div above -->
     </header>
-    <section class="section-4" id="my-skills">
-        <div class="my-skills-description">
-            <div class="my-skills-heading">
-                <h3></h3>
+    <section class="section-4" id="Skills">
+        <div class="skills-description">
+            <div class="skills-heading">
+                <h3>My Skills</h3>
                 <p>I love writing about my experiences ans share it to the world because i always
                     knew that some people will acquire some knowledge  out of it...
                 </p>
             </div>
-            <a href="#" class="my-skills-button">
+            <a href="#" class="contact-button">
                 <div>
                     <span class="bg"></span>
                     <span class="base"></span>
@@ -71,53 +71,64 @@
                 </div>
             </a>
         </div>
-        <div class="my-skills-section">
-            <h1>My-skills</h1>
-            <div class="my-skills-wrapper" data-aos='fade-in'>
-                <a href="#"><h3>Cooking</h3></a>
-                <p>
+        <div class="skills-section">
+            <h1>Skills</h1>
+            <div class="skills-wrapper" data-aos='fade-in'>
+                <a href="#"><h3>Animation in css </h3></a>
+                <p> Animation is cool in website but it's take time to learn and lots of struggle you will experiences
+                    me as a student when i see a cool website with cool Animation its inspired me to learn css animation but now
+                    i need more practice and more improvements about animaton.
                 </p>
                 <a href="#">Read More>></a>
             </div>
 
-            <!-- second blog -->
-            <div class="my-skills-wrapper" data-aos='fade-up'>
-                <a href="#"><h3>Editing with use photoshop</h3></a>
-                <p>
+            <!-- second skills-->
+            <div class="skills-wrapper" data-aos='fade-up'>
+                <a href="#"><h3>Photo Editng</h3></a>
+                <p>My rating about photo Editing i can give own rate 50% need more practice, type of photo editng that i use is Photoshop
                 </p>
                 <a href="#">Read More>></a>
             </div>
-            <!-- third blog -->
-            <div class="my-skills-wrapper" data-aos='slide-up'>
-                <a href="#"><h3>Imrpoving my Coding Career</h3></a>
-                <p>There are some certain things that i need
-                    to be doing right away to improve in my coding career...
+            <!-- third skills -->
+            <div class="skills-wrapper" data-aos='slide-up'>
+                <a href="#"><h3>Photography</h3></a>
+                <p>I'm a Photographer i really like capturing things ,moment and so on.
+                    My skills in Photography is on middle class and type of Photography creative and close shot Photography.
                 </p>
                 <a href="#">Read More>></a>
             </div>
-            <!-- fourth blog -->
-            <div class="my-skills-wrapper" data-aos='fade-down'>
-                <a href="#"><h3>Photographer</h3></a>
-                <p>
+            <!-- fourth skills-->
+            <div class="skills-wrapper" data-aos='fade-down'>
+                <a href="#"><h3>Videographer/Editing</h3></a>
+                <p>My skills in video editing are good i can rate it 60% over 100% and type of video edting that i use cupcut,canva and so on.
+                     I'm also creative in video editing and editing it takes time.
                 </p>
                 <a href="#">Read More>></a>
             </div>
-            <!-- fifth blog -->
-            <div class="my-skills-wrapper" data-aos='zoom-in'>
-                <a href="#"><h3>Javascript/python</h3></a>
-                <p>It's true that Javascript is a frustrating Programming 
-                    language especially if you are just starting out...
+            <!-- fifth skills-->
+            <div class="skills-wrapper" data-aos='zoom-in'>
+                <a href="#"><h3>Cooking</h3></a>
+                <p>My skills in cooking are good i can cook dish, dessert and so on. My target when it comes to cooking 
+                    number 1  is taste second cleanliness and lastly the plating things i learned it from observation and practices.
                 </p>
                 <a href="#">Read More>></a>
             </div>
-            <!-- sixth blog -->
-            <div class="my-skills-wrapper" data-aos='slide-down'>
-                <a href="#"><h3>Videographer</h3></a>
-                <p>
+            <!-- sixth skills-->
+            <div class="skills-wrapper" data-aos='slide-down'>
+                <a href="#"><h3>Gaming</h3></a>
+                <p>My skills in gaming are good and sometimes not but in serious game i'm good at it i take it seriously
+                    to not lost in game. strategy is the key in playing in game.
                 </p>
                 <a href="#">Read More>></a>
             </div>
         </div> 
     </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>                        
+    <script>
+    AOS.init({ duration : 1500, easing: 'ease-in-out'});
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="index.js"></script>
 </body>
 </html>
