--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,11 @@
                     </ul>
                     <!-- social icons for header below -->
                     <div class="social-icons">
-                        <li><a href="https://www.facebook.com"class="link"><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com"class="link"><i class="fa-brands fa-twitter"></i></i></a></li> 
-                        <li><a href="https://www.twitter.com" class="link"><i class="fa-brands fa-instagram"></i></a></li> 
-                        <li><a href="https://www.youtube.com" class="link"><i class="fa-brands fa-youtube"></i></i></a></li>
+                         <a href="https://www.facebook.com/rolando.majait.5?mibextid=ZbWKwL" class="link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/tottskie16/photo" class="link"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/p/CjiAuhIJPCymsB0DI1SvgeTUWm304aNqhqSjtw0/" class="link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/rolandz16" class="link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCG2skpNoSKjVpLNsHROlFmg/" class="link"><i class="fab  fa-youtube"></i></a>
                     </div>
                     <!-- social icons for header ends here -->
                 </div>
@@ -72,15 +73,13 @@
                 <input type="submit" value="Send A Message">
             </form>
            
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3854.5726813874267!2d120.7560201143241!3d14.960882072157863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33965633ab27826d%3A0x2d7dedc6e68c3526!2sLarlin%20Village!5e0!3m2!1sen!2sng!4v1673448439600!5m2!1sen!2sng"
-             style="border:0;" allowfullscreen="" class="map" loading="lazy"></iframe> -->
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36672.99545657263!2d120.75565673947852!3d14.949690354628242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33965633ab27826d%3A0x2d7dedc6e68c3526!2sLarlin%20Village!5e0!3m2!1sen!2sng!4v1673448761320!5m2!1sen!2sng" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36672.99545657263!2d120.75565673947852!3d14.949690354628242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33965633ab27826d%3A0x2d7dedc6e68c3526!2sLarlin%20Village!5e0!3m2!1sen!2sng!4v1673448761320!5m2!1sen!2sng"style="border:0;" allowfullscreen="" class="map" loading="lazy"></iframe>
         </div>
     </section> 
 
     <!-- scroll to the top icons -->
     <a class="scroll-link top-link" href="index.html">
-        <i class="fas fa-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </a> 
 </body>
 </html>
