--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css"> 
     <script src="https://kit.fontawesome.com/3d19df2003.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
     <header>
         <div class="nav-center">
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="logo" class="logo" width="100px" height="150px"></a>
+                <a href="#"><img src="images/logo.png" alt="logo" class="logo"></a>
                 <!-- toggle btns -->
                 <div class="toggle-icon">
-                    <span class="toggle-btn bars"><i class="fas fa-bars"></i></span>
-                    <span class="toggle-btn times"><i class="fas fa-times"></i></span>
+                    <span class="toggle-btn bars"><i class="fa-solid fa-bars"></i></span>
+                    <span class="toggle-btn xmark"><i class="fa-solid fa-xmark"></i></span>
                 </div>
             </nav>
 
@@ -39,7 +38,7 @@
                     </ul>
                     <!-- social icons for header below -->
                     <div class="social-icons">
-                         <a href="https://www.facebook.com/rolando.majait.5?mibextid=ZbWKwL" class="link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/rolando.majait.5?mibextid=ZbWKwL" class="link"><i class="fab fa-facebook"></i></a>
                         <a href="https://twitter.com/tottskie16/photo" class="link"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/p/CjiAuhIJPCymsB0DI1SvgeTUWm304aNqhqSjtw0/" class="link"><i class="fab fa-instagram"></i></a>
                         <a href="https://github.com/rolandz16" class="link"><i class="fab fa-github"></i></a>
@@ -47,10 +46,9 @@
                     </div>
                     <!-- social icons for header ends here -->
                 </div>
-                
             </div>
             <!-- resume link -->
-            <a href="#" class="resume">Portfolio</a>
+            <a href="index.html" class="resume">Portfolio</a>
         </div> 
         <!-- nav center div above -->
     </header>
