--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,11 @@
            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36672.99545657263!2d120.75565673947852!3d14.949690354628242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33965633ab27826d%3A0x2d7dedc6e68c3526!2sLarlin%20Village!5e0!3m2!1sen!2sng!4v1673448761320!5m2!1sen!2sng"style="border:0;" allowfullscreen="" class="map" loading="lazy"></iframe>
         </div>
     </section> 
-
-    <!-- scroll to the top icons -->
-    <a class="scroll-link top-link" href="index.html">
-        <i class="fa-solid fa-arrow-up"></i>
-    </a> 
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>                        
+    <script>
+    AOS.init({ duration : 1500, easing: 'ease-in-out'});
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="index.js"></script>
 </body>
 </html>
